<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/imagesSection1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/Section1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
           >

            <ImageView
                android:id="@+id/opponent1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:rotation="135"
                android:scaleType="centerInside"
                android:src="@mipmap/pedra"
                app:tint="@color/design_default_color_on_secondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/opponent1Txt"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lSection2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/opponent2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:rotation="225"
                android:scaleType="centerInside"
                android:src="@mipmap/pedra"
                app:tint="@color/design_default_color_on_secondary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/opponent2Txt"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imagesSection2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="135dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/opponent3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:baselineAlignBottom="true"
            android:scaleType="centerInside"
            android:src="@mipmap/pedra"
            app:tint="@color/design_default_color_on_secondary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/opponent3Txt"
            android:textAlignment="center" />

    </LinearLayout>

</FrameLayout>