<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/opponentConfig"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbOpponent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/txtOpponentLabel"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/opponentRGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checked="true"
                android:text="2"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio2Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="3"
                android:textColor="@color/black" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/roundsConfig"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbRounds"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/lbRounds"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/roundRGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/round1Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checked="true"
                android:text="1"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/round3Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="3"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/round5Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="5"
                android:textColor="@color/black" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="115dp"
        >

        <Button
            android:id="@+id/saveBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/stSave" />

        <Button
            android:id="@+id/cancelBt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/stCancel" />

    </LinearLayout>

</FrameLayout>